--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3897,7 +3897,7 @@ input, select, textarea {
 		}
 
 		.badge {
-			background-color: #e74c3c;
+			background-color: #b06e93;
 			color: #fff;
 			font-size: 0.75em;
 			padding: 0.3em 0.6em;
@@ -3928,7 +3928,7 @@ input, select, textarea {
 		
 		.course-tag {
 			display: inline-block;
-			background-color: #6fc3df; /* or your theme-matching color */
+			background-color: #b06e93; /* or your theme-matching color */
 			color: white;
 			padding: 0.4em 0.9em;
 			margin-right: 1em;
